3.6.0
  - New API
    - ConnectionFactory now also may customize connection closing
    - GenericTypes.findGenericParameter(Type, Class) now also takes an index, e.g. to resolve `V` in `Map<K, V>`
    - @JdbiConstructor can now be placed on a static factory method
    - GenericMapMapperFactory enables fluent API and SqlObject support for mapping homogenously typed rows
      (e.g. "select 1.0 as low, 2.0 as medium, 3.0 as high") to `Map<String, V>` for any `V`
      that can be handled by a ColumnMapper.
    - ResultBearing.mapToMap overloads to use the GenericMapMapperFactory
    - ParsedSql can be created with ParsedSql.of(String, ParsedParameters) factory
    - ParsedParameters can be created with ParsedSql.positional(int) and ParsedSql.named(List<String>) factories
  - New beta API
    - Type qualifiers for binding and mapping. Use annotations to distinguish between different SQL
      data types that map to the same Java type. e.g. VARCHAR, NVARCHAR, and Postgres MACADDR all
      map to String, but are bound and mapped with different JDBC APIs.
    - Support for NVARCHAR columns, using the @NVarchar qualifying annotation
    - Support for Postgres MACADDR columns, using the @MacAddr qualifying annotation.
    - Support for HSTORE columns, using the @HStore annotation

3.5.2
  - Bug Fixes
    - bindList throws an NPE if called with an immutable list,
      method is safe according to the specification
  - Improvements
    - improve binding private implementations of interfaces
    - improved loggability (through SqlLogger) of JDBI's built-in Argument instances

3.5.1 (whoops, 3.5.0 was released from the wrong commit!)
  - New API
    - SqlStatements.allowUnusedBindings allows you to bind Arguments to query parts that may be
      left out of the final query (e.g. by a TemplateEngine that renders conditional blocks)
      without getting an Exception.
    - Added the MapMappers JdbiConfig class to configure column name case changes, preferred over