@@ -38,7 +38,6 @@
                         <configuration>
                             <skip>false</skip>
                             <includes>**/*.java</includes>
-                            <outputDirectory>${project.build.directory}/generated-sources/org/jdbi/v3/lib/internal</outputDirectory>
 
                             <artifactItems>
                                 <artifactItem>
@@ -47,6 +46,16 @@
                                     <version>0.9.14</version>
                                     <type>jar</type>
                                     <classifier>sources</classifier>
+                                    <outputDirectory>${project.build.directory}/generated-sources/org/jdbi/v3/lib/internal/jool</outputDirectory>
+                                </artifactItem>
+
+                                <artifactItem>
+                                    <groupId>net.jodah</groupId>
+                                    <artifactId>expiringmap</artifactId>
+                                    <version>0.5.6</version>
+                                    <type>jar</type>
+                                    <classifier>sources</classifier>
+                                    <outputDirectory>${project.build.directory}/generated-sources/org/jdbi/v3/lib/internal/expiringmap</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -65,7 +74,9 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <replace dir="${project.build.directory}/generated-sources/org/jdbi/v3/lib/internal/org/jooq/lambda" encoding="UTF-8" token="org.jooq.lambda" value="org.jdbi.v3.lib.internal.org.jooq.lambda" />
+                                <replace dir="${project.build.directory}/generated-sources/org/jdbi/v3/lib/internal/jool" encoding="UTF-8" token="org.jooq.lambda" value="org.jdbi.v3.lib.internal.jool.org.jooq.lambda" />
+
+                                <replace dir="${project.build.directory}/generated-sources/org/jdbi/v3/lib/internal/expiringmap" encoding="UTF-8" token="net.jodah.expiringmap" value="org.jdbi.v3.lib.internal.expiringmap.net.jodah.expiringmap" />
                             </tasks>
                         </configuration>
                     </execution>
