@@ -221,12 +221,6 @@
             </dependency>
 
             <dependency>
-                <groupId>net.jodah</groupId>
-                <artifactId>expiringmap</artifactId>
-                <version>0.5.6</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr-runtime</artifactId>
                 <version>${dep.antlr.version}</version>
