@@ -17,9 +17,9 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
-import net.jodah.expiringmap.ExpirationPolicy;
-import net.jodah.expiringmap.ExpiringMap;
 import org.jdbi.v3.core.locator.internal.ClasspathBuilder;
+import org.jdbi.v3.lib.internal.expiringmap.net.jodah.expiringmap.ExpirationPolicy;
+import org.jdbi.v3.lib.internal.expiringmap.net.jodah.expiringmap.ExpiringMap;
 import org.stringtemplate.v4.ST;
 import org.stringtemplate.v4.STGroup;
 import org.stringtemplate.v4.STGroupFile;
